fix alert admonition block text overflow

--- a/ui/src/stylesheets/admonitionblock.scss
+++ b/ui/src/stylesheets/admonitionblock.scss
@@ -37,6 +37,10 @@
       border: none;
       padding: 0;
       margin: 0;
+      word-wrap: break-word;
+      a {
+        word-break: break-all;
+      }
     }
   }
 
